[gd_scene load_steps=17 format=2]

[ext_resource path="res://src/characters/enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/art/enemies/blob.png" type="Texture" id=2]
[ext_resource path="res://src/characters/enemies/Blob.gd" type="Script" id=3]
[ext_resource path="res://src/states/enemy_states/BlobStateMachine.gd" type="Script" id=4]
[ext_resource path="res://src/states/enemy_states/motion/BlobMove.gd" type="Script" id=5]
[ext_resource path="res://src/states/enemy_states/motion/BlobIdle.gd" type="Script" id=6]
[ext_resource path="res://src/states/enemy_states/motion/BlobChase.gd" type="Script" id=7]
[ext_resource path="res://src/states/Stagger.gd" type="Script" id=8]
[ext_resource path="res://src/states/enemy_states/Die.gd" type="Script" id=9]

[sub_resource type="Animation" id=1]
resource_name = "INIT"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "die"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 4.43828, 1.27456, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.152941, 0.152941, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 12 )

[sub_resource type="Animation" id=5]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.7, 0.9, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 2 ]
}

[sub_resource type="CircleShape2D" id=6]

[sub_resource type="CapsuleShape2D" id=7]
radius = 5.0
height = 17.0

[node name="Blob" instance=ExtResource( 1 )]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 3 )

[node name="Sprite" parent="." index="0"]
position = Vector2( 0, -6 )
texture = ExtResource( 2 )
vframes = 2
frame = 4

[node name="CharacterAnimations" parent="." index="1"]
anims/INIT = SubResource( 1 )
anims/die = SubResource( 2 )
anims/hurt = SubResource( 3 )

[node name="Hitbox" parent="." index="2"]
visible = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -4 )
shape = SubResource( 4 )

[node name="EnemyAnimations" parent="." index="3"]
anims/move = SubResource( 5 )

[node name="BlobStateMachine" type="Node" parent="." index="4"]
script = ExtResource( 4 )
default_state = NodePath("BlobIdle")

[node name="BlobIdle" type="Node" parent="BlobStateMachine" index="0"]
script = ExtResource( 6 )

[node name="BlobMove" type="Node" parent="BlobStateMachine" index="1"]
script = ExtResource( 5 )

[node name="BlobChase" type="Node" parent="BlobStateMachine" index="2"]
script = ExtResource( 7 )

[node name="Stagger" type="Node" parent="BlobStateMachine" index="3"]
script = ExtResource( 8 )

[node name="Die" type="Node" parent="BlobStateMachine" index="4"]
script = ExtResource( 9 )

[node name="Hurtbox" type="Area2D" parent="." index="5"]
visible = false
position = Vector2( 0, -3 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox" index="0"]
modulate = Color( 0.964706, 0, 0, 1 )
shape = SubResource( 6 )

[node name="Collider" type="CollisionShape2D" parent="." index="6"]
visible = false
position = Vector2( 0, 2 )
rotation = 1.5708
shape = SubResource( 7 )

[node name="AggroArea" parent="." index="7"]
visible = false

[node name="DeaggroArea" parent="." index="8"]
visible = false
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
